fix: Update namespace to reflect SpriteAuditor

--- a/FullSerializer/Editor/SpriteAuditor.FullSerializer.asmdef
+++ b/FullSerializer/Editor/SpriteAuditor.FullSerializer.asmdef
@@ -1,8 +1,10 @@
 {
-    "name": "BrunoMikoski.AtlasAuditor",
+    "name": "BrunoMikoski.SpriteAuditor.FullSerializer",
     "references": [],
     "optionalUnityReferences": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
