--- a/Scripts/Editor/SpriteAuditor.Editor.asmdef
+++ b/Scripts/Editor/SpriteAuditor.Editor.asmdef
@@ -1,6 +1,9 @@
 {
-    "name": "AtlasAuditor.FullSerializer",
-    "references": [],
+    "name": "BrunoMikoski.SpriteAuditor.Editor",
+    "references": [
+        "BrunoMikoski.SpriteAuditor",
+        "BrunoMikoski.SpriteAuditor.FullSerializer"
+    ],
     "optionalUnityReferences": [],
     "includePlatforms": [
         "Editor"
