fix: More tweaks for the atlas view and general fixes

--- a/Scripts/Runtime/SpriteAuditor.asmdef
+++ b/Scripts/Runtime/SpriteAuditor.asmdef
@@ -2,9 +2,7 @@
     "name": "BrunoMikoski.SpriteAuditor",
     "references": [],
     "optionalUnityReferences": [],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
