--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.brunomikoski.spriteauditor",
   "displayName": "Sprite Auditor",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "unity": "2018.4",
-  "description": "Visualizer for sprites usage / atlas ",
+  "description": "The missing tool for sprite management",
   "keywords": [
     "sprite",
     "optimization",
